--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="name">Name</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="sign_up">Sign Up</string>
-    <string name="you_ve_logged_in_successfully">You\'ve logged in successfully!</string>
-    <string name="you_have_successfully_logged_in">You have successfully logged in!</string>
+    <string name="todo">TODO</string>
+    <string name="enter_message">Enter Message</string>
+    <string name="bot_message">Bot Message</string>
+    <string name="user_message">User message</string>
 </resources>
